--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "espree": "^10.0.0",
     "parcel": "^2.11.0",
     "prettier": "^3.2.5",
     "process": "^0.11.10"
